<resources>
    <string name="app_name">语音狼上帝</string>
    <string name="select_player_num">游 戏 人 数</string>
    <string name="reduce">减少</string>
    <string name="add">增加</string>
    <string name="_10">10</string>
    <string name="select_role">选 择 角 色</string>
    <string name="close_your_eyes">确 认 角 色</string>
    <!--角色-->
    <string name="villager">村民</string>
    <string name="werewolf">狼人</string>
    <string name="devil">恶魔</string>
    <string name="white_wolf">白狼王</string>
    <string name="beautiful_wolf">狼美人</string>
    <string name="cupid">丘比特</string>
    <string name="seer">预言家</string>
    <string name="witch">女巫</string>
    <string name="hunter">猎人</string>
    <string name="protect">守卫</string>
    <string name="thief">盗贼</string>
    <string name="idiot">白痴</string>
    <string name="succubus">魅魔</string>

    <string name="sing_player_status">请标记%d号玩家状态</string>
    <string name="is_alive">是否存活</string>
    <string name="select_identity">选 择 身 份</string>
    <string name="start">月黑风高杀人夜</string>
    <string name="sign_lover">标记为恋人</string>
    <string name="die_for_love">恋人殉情</string>
    <string name="message_clear_data">返回上一页面将清空所有当前数据，需重新设置玩家信息，确定返回？</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="select_die_type">请选择死亡类型！</string>
    <string name="default_role">未设置身份</string>
    <string name="role_not">玩家 %d 未设置身份</string>
    <string name="role_ok">已确认角色</string>
    <string name="wolf_do">狼人请行动</string>
    <string name="wolf_detail">请选择你要杀的人</string>
    <string name="yes">是的</string>
    <string name="no">不不不</string>

    <string name="set_role_title">身 份 设 置</string>
    <string name="player_set_role">%d 号玩家</string>

    <!--狼人页面-->
    <string name="wolf_title">狼人请睁眼</string>
    <string name="wolf_describe">狼人请杀人</string>
    <string name="wolf_kill_title">你们决定刺杀 %d 号玩家？</string>

    <!--女巫页面-->
    <string name="witch_title">女巫请睁眼</string>
    <string name="witch_describe">女巫开始行动</string>
    <string name="witch_save_nobody_title">本回合没有玩家被刺杀</string>
    <string name="witch_save_title">%d 号玩家死亡你是否要救？</string>
    <string name="witch_not_kill_title">已使用解药无法使用毒药</string>
    <string name="witch_kill_title">是否使用毒药？</string>
    <string name="witch_kill_person">使用毒药杀死 %d 号玩家？</string>

    <!--预言家页面-->
    <string name="seer_title">预言家请睁眼</string>
    <string name="seer_describe">预言家请验人</string>
    <string name="seer_see_title">你决定验证 %d 号玩家身份？</string>
    <string name="seer_good">%d 号玩家是 好人</string>
    <string name="seer_bad">%d 号玩家是 狼人</string>

    <!--最终页面-->
    <string name="final_tile">天亮啦！！~！！</string>
    <string name="final_result_title">昨天晚上的结果</string>
    <string name="final_result_safe">平安夜</string>
    <string name="final_result_dead">%s 号玩家死亡</string>
    <string name="final_result_button">点击查看昨晚结果</string>
    <string name="final_replay_button">再搞一把</string>
    <string name="final_reset_button">重新设置游戏人数和角色</string>
</resources>
