<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_player_num"/>


        <ImageView
            android:id="@+id/iv_reduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shopping_reduce"
            android:padding="10dp"
            android:contentDescription="@string/reduce" />

        <EditText
            android:id="@+id/et_count"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:background="@drawable/black_corner"
            android:text="@string/_10"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="3"
            android:gravity="center"
            android:imeOptions="actionDone"/>

        <ImageView
            android:id="@+id/iv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shopping_add"
            android:padding="10dp"
            android:contentDescription="@string/add"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/black"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_role"
        android:padding="10dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_role"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/tv_close_eye"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close_your_eyes"
        android:textColor="@android:color/white"
        android:background="@drawable/blue_fill_corner"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:gravity="center"/>
</LinearLayout>
