<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:background="@android:color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="@drawable/shape_header"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/tv_select_id_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/big_title"
            android:textColor="@color/title"
            android:text="@string/player_set_role"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/subtitle"
        android:textColor="@color/title"
        android:text="@string/select_identity"
        android:paddingTop="5dp"/>

    <ListView
        android:id="@+id/lv_role_end"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:choiceMode="singleChoice"
        android:divider="@null"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/tv_confirm_end"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/start"
        android:textColor="@android:color/white"
        android:background="@drawable/red_fill_corner"
        android:layout_margin="9dp"
        android:textSize="@dimen/subtitle"
        android:gravity="center"/>
</LinearLayout>